Update service and implementation
